--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,14 +21,17 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "lib": [
-      "ES2022",
+      "ES2016",
       "dom"
     ]
   },
   "angularCompilerOptions": {
+    "strictNullChecks": false,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": false,
+    "enableIvy": true,//added for fix pagination module importing error
+    "strictDomEventTypes": false
   }
 }
