End of Section13

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,14 +1,14 @@
 {
-  
-  "ConnectionStrings": {
-    "DefaultConnection":"Data source=skinet.db"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection":"Data source=skinet.db",
+    "Redis":"localhost"
   },
   "ApiUrl":"https://localhost:5001/",
   "AllowedHosts": "*"
