--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "xng-breadcrumb": "^9.0.0",
     "zone.js": "~0.13.0"
   },
@@ -36,6 +37,7 @@
     "@angular/compiler-cli": "^16.0.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
