--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,15 +1,20 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
+      "Default": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=skinet.db",
-    "Redis":"localhost"
+    "DefaultConnection": "Data source=skinet.db",
+    "IdentityConnection": "Data source=identity.db",
+    "Redis": "localhost"
   },
-  "ApiUrl":"https://localhost:5001/",
+  "Token": {
+    "Key": "this is my custom Secret key for authentication this is my custom Secret key for authentication",
+    "Issuer": "https://localhost:5001"
+  },
+  "ApiUrl": "https://localhost:5001/",
   "AllowedHosts": "*"
 }
